[package]
name = "semver-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI to manipulate semver specs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "semver"
test = false
bench = false
path = "src/main.rs"

[dependencies]
anyhow = "1.0.62"
clap = "3.2.17"
semver = "1.0"

